--- a/src/main/resources/com/vertex/vos/assets/style.css
+++ b/src/main/resources/com/vertex/vos/assets/style.css
@@ -338,19 +338,21 @@
     -fx-padding: 10; /* Padding around the GridPane */
     -fx-hgap: 15;    /* Horizontal gap between columns */
     -fx-vgap: 15;    /* Vertical gap between rows */
-}/* Light theme for MenuItem and ContextMenu */
+}
+
+
  .context-menu, .menu-item {
-     -fx-background-color: #ffffff; /* White background */
+     -fx-background-color: #f0f0f0; /* White background */
      -fx-text-fill: #333333;        /* Dark gray text */
      -fx-font-size: 14px;           /* Font size */
-     -fx-padding: 10px;             /* Padding around the items */
+     -fx-padding: 5px;             /* Padding around the items */
  }
 
  .context-menu .menu-item:focused,
  .context-menu .menu-item:hover,
  .menu .menu-item:focused,
  .menu .menu-item:hover {
-     -fx-background-color: #e0e0e0; /* Light gray background on hover */
+     -fx-background-color: #DCF2FF; /* Light gray background on hover */
  }
 
  .context-menu .menu-item:disabled,
@@ -360,7 +362,7 @@
 
  .context-menu, .menu {
      -fx-background-color: #f5f5f5; /* Light gray background for the whole menu */
-     -fx-border-color: #cccccc;     /* Light gray border */
+     -fx-border-color: #5A90CF;     /* Light gray border */
      -fx-border-width: 1px;
  }
 
@@ -376,10 +378,11 @@
  }
 
  .menu-bar .menu-button:hover {
-     -fx-background-color: #e0e0e0;
+     -fx-background-color: #DCF2FF;
  }
 
  .menu .menu-item:focused,
  .menu .menu-item:hover {
      -fx-background-color: #e0e0e0;
+     -fx-text-fill: #3E4756;
  }
