--- a/src/main/resources/com/vertex/vos/loginForm.fxml
+++ b/src/main/resources/com/vertex/vos/loginForm.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -68,8 +69,14 @@
                             </children>
                         </VBox>
                         <Label fx:id="loginFailed" style="-fx-text-fill: #FF0000; -fx-font-weight: 700;" text="Sign in failed" visible="false" />
+                  <HBox alignment="CENTER_LEFT" style="-fx-spacing: 10;">
+                     <children>
+                        <ComboBox fx:id="environment" prefHeight="25.0" prefWidth="234.0" />
+                     </children>
+                  </HBox>
                     </children>
                 </VBox>
+            <Label fx:id="version" text="Label" />
             </children>
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
