--- a/src/main/resources/com/vertex/vos/AdminContent.fxml
+++ b/src/main/resources/com/vertex/vos/AdminContent.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Text?>
@@ -27,7 +28,7 @@
                         <Label style="-fx-font-size: 25px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-weight: 700;" styleClass="text-title-logo" text="Admin" />
                      </children>
                   </HBox>
-                  <HBox prefWidth="800.0" spacing="20.0">
+                  <TilePane fx:id="tilePane" hgap="10.0" vgap="10.0">
                      <children>
                         <VBox fx:id="registrationBox" alignment="CENTER_LEFT" maxWidth="200.0" onMouseClicked="#openRegistration" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                            <children>
@@ -53,11 +54,8 @@
                                  </color>
                               </DropShadow>
                            </effect>
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
                         </VBox>
-                        <VBox fx:id="hrBox" alignment="CENTER_LEFT" layoutX="810.0" layoutY="10.0" maxWidth="200.0" onMouseClicked="#openHumanResources" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                        <VBox fx:id="hrBox" alignment="CENTER_LEFT" maxWidth="200.0" onMouseClicked="#openHumanResources" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                            <children>
                               <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
@@ -82,7 +80,7 @@
                               </DropShadow>
                            </effect>
                         </VBox>
-                        <VBox fx:id="aeBox" alignment="CENTER_LEFT" layoutX="611.0" layoutY="10.0" maxWidth="200.0" onMouseClicked="#openAssetsEquipments" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text" visible="false">
+                        <VBox fx:id="aeBox" alignment="CENTER_LEFT" maxWidth="200.0" onMouseClicked="#openAssetsEquipments" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text" visible="false">
                            <children>
                               <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
@@ -108,7 +106,7 @@
                            </effect>
                         </VBox>
                      </children>
-                  </HBox>
+                  </TilePane>
                </children>
                <padding>
                   <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
