--- a/src/main/resources/com/vertex/vos/ReportsContent.fxml
+++ b/src/main/resources/com/vertex/vos/ReportsContent.fxml
@@ -27,7 +27,7 @@
                                 <Label style="-fx-font-size: 25px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-weight: 700;" styleClass="text-title-logo" text="Reports" />
                             </children>
                         </HBox>
-                        <TilePane fx:id="reportsTilePane" hgap="20.0" prefColumns="3" prefRows="4" vgap="20.0">
+                        <TilePane fx:id="tilePane" hgap="20.0" prefColumns="3" prefRows="4" vgap="20.0">
                             <children>
                                 <VBox fx:id="openSupplierAccount" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                                     <children>
