--- a/src/main/resources/com/vertex/vos/structureNavigation.fxml
+++ b/src/main/resources/com/vertex/vos/structureNavigation.fxml
@@ -25,7 +25,7 @@
                   <Label style="-fx-font-size: 25px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-weight: 700;" styleClass="text-title-logo" text="Structure" />
                </children>
             </HBox>
-            <TilePane styleClass="tile-pane" tileAlignment="TOP_LEFT">
+            <TilePane fx:id="tilePane" styleClass="tile-pane" tileAlignment="TOP_LEFT">
                <children>
                   <VBox fx:id="companyBox" alignment="TOP_CENTER" prefWidth="160.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                      <children>
