--- a/src/main/resources/com/vertex/vos/assets/style.css
+++ b/src/main/resources/com/vertex/vos/assets/style.css
@@ -383,6 +383,6 @@
 
  .menu .menu-item:focused,
  .menu .menu-item:hover {
-     -fx-background-color: #e0e0e0;
+     -fx-background-color: #155E98;
      -fx-text-fill: #3E4756;
  }
