--- a/src/main/resources/com/vertex/vos/inventoryLedgerIOperations.fxml
+++ b/src/main/resources/com/vertex/vos/inventoryLedgerIOperations.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -105,5 +106,6 @@
          </content>
       </ScrollPane>
       <TableView fx:id="inventoryTableView" stylesheets="@assets/table.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="280.0" />
+      <Button fx:id="exportButton" mnemonicParsing="false" text="Export" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
    </children>
 </AnchorPane>
